<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_DefectTable" Id="{cf38894e-519c-4c1d-85d5-079b920fd2fe}">
    <Declaration><![CDATA[TYPE ST_DefectTable :
STRUCT
  bHideDefect   : BOOL := TRUE;
  pDefect       : pointer to CL_Defect; //pointer to the Defect itself
	State         : E_DefectState := E_DefectState.None;
	Severity      : TcEventSeverity := TcEventSeverity.Verbose;
	ErrorID       : STRING(3) :='';
	ClassID       : STRING(3) :='';
	Color         : DWORD := 0;
  InstancePath  : T_InstancePath := '';
	Description   : T_MaxString := '';
	RisingEdge    : STRING(CDefect.nDefectTableStrLen_C) := '';;
	FallingEdge   : STRING(CDefect.nDefectTableStrLen_C) := '';;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>